// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={false}
    appearance="primary"
    inverse={false}
    radius="large"
    size="normal"
  >
    9
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": false,
      "appearance": "primary",
      "children": "9",
      "inverse": false,
      "radius": "large",
      "size": "normal",
    },
    "ref": null,
    "rendered": "9",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": false,
        "appearance": "primary",
        "children": "9",
        "inverse": false,
        "radius": "large",
        "size": "normal",
      },
      "ref": null,
      "rendered": "9",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Badge Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={false}
    appearance="primary"
    inverse={false}
    radius="large"
    size="small"
  >
    9
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": false,
      "appearance": "primary",
      "children": "9",
      "inverse": false,
      "radius": "large",
      "size": "small",
    },
    "ref": null,
    "rendered": "9",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": false,
        "appearance": "primary",
        "children": "9",
        "inverse": false,
        "radius": "large",
        "size": "small",
      },
      "ref": null,
      "rendered": "9",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Badge Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={false}
    appearance="danger"
    inverse={false}
    radius="large"
    size="large"
  >
    9
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": false,
      "appearance": "danger",
      "children": "9",
      "inverse": false,
      "radius": "large",
      "size": "large",
    },
    "ref": null,
    "rendered": "9",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": false,
        "appearance": "danger",
        "children": "9",
        "inverse": false,
        "radius": "large",
        "size": "large",
      },
      "ref": null,
      "rendered": "9",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Badge Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={true}
    appearance="success"
    inverse={false}
    radius="large"
    size="normal"
  >
    9
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": true,
      "appearance": "success",
      "children": "9",
      "inverse": false,
      "radius": "large",
      "size": "normal",
    },
    "ref": null,
    "rendered": "9",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": true,
        "appearance": "success",
        "children": "9",
        "inverse": false,
        "radius": "large",
        "size": "normal",
      },
      "ref": null,
      "rendered": "9",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Badge Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={false}
    appearance="info"
    inverse={false}
    radius="none"
    size="large"
  >
    Pre-pack
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": false,
      "appearance": "info",
      "children": "Pre-pack",
      "inverse": false,
      "radius": "none",
      "size": "large",
    },
    "ref": null,
    "rendered": "Pre-pack",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": false,
        "appearance": "info",
        "children": "Pre-pack",
        "inverse": false,
        "radius": "none",
        "size": "large",
      },
      "ref": null,
      "rendered": "Pre-pack",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Badge Component snapshots should match snapshot 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Badge
    animated={false}
    appearance="warning"
    inverse={true}
    radius="small"
    size="normal"
  >
    Acknowledged
  </Badge>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "animated": false,
      "appearance": "warning",
      "children": "Acknowledged",
      "inverse": true,
      "radius": "small",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Acknowledged",
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;",
          [Function],
          ";border-radius:",
          [Function],
          ";text-align:center;color:",
          [Function],
          ";background-color:",
          [Function],
          ";border:solid 1px;",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
        ],
      },
      "displayName": "Badge__BadgeWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
      "target": "span",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "animated": false,
        "appearance": "warning",
        "children": "Acknowledged",
        "inverse": true,
        "radius": "small",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Acknowledged",
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-block;",
            [Function],
            ";border-radius:",
            [Function],
            ";text-align:center;color:",
            [Function],
            ";background-color:",
            [Function],
            ";border:solid 1px;",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "displayName": "Badge__BadgeWrapper",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Badge__BadgeWrapper-sc-1q7ewnl-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
